# omaDOS

./: .gitignore  .pre-commit-config.yaml  README.md  game.py  main.py  pyproject.toml
notebooks/: game_logic.ipynb  greedy_agents_game.ipynb  rl_agents_game.ipynb  rules.ipynb  simple_agents_game.ipynb  tests.ipynb
scripts/: plot_rewards.py  train_reinforce.py
src/omados/agents/: base.py  greedy.py  random.py  rl.py
src/omados/engine/: cards.py  game.py  game_2.py  modes.py  rules.py  scoring.py  tricks.py
src/omados/env/: game.py
src/omados/models/: policy_net.py
src/omados/training/: reinforce.py
tests/: conftest.py
tests/engine/: test_cards.py  test_modes.py  test_rules.py  test_rules_bidding.py  test_rules_legal_moves_non_sauspiel.py  test_rules_playable_suits.py  test_rules_winner.py  test_scoring.py  test_teams.py  test_trick.py  test_trick_lead_card.py
