[project]
name = "omados"
version = "0.1.0"
description = "A reinforcement-learning agent for the Bavarian card game Schafkopf (game engine + REINFORCE self-play)."
readme = "README.md"
requires-python = ">=3.10.4"
dependencies = [
    "einops>=0.8.2",
    "numpy>=2.2.6",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omados"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
ignore_missing_imports = true
